this will prevent the 'fedora happens hear' splash banner from writing over other widgets on narrow screens. this is part of the fix for trac ticket #77

--- a/fedoracommunity/public/css/application-chrome.css
+++ b/fedoracommunity/public/css/application-chrome.css
@@ -175,6 +175,7 @@ a {
   width: 100%;
   height: 116px;
   -moz-border-radius: 12px;
+  overflow: hidden;
 }
 
 #banner-header img {
